<resources>
    <string name="app_name">F1 Data Collection</string>
    <string name="titleRace">Race results</string>
    <string name="getraces">Search Races</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="championships">Championships</string>
    <string name="constructor_titles">Constructor titles</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="navigation_menu">Navigation menu</string>
    <string name="app_name_long">Formula 1 Data Collection</string>
    <string name="official_f1_website">Official F1 website</string>
    <string name="legal">Legal</string>
    <string name="choose_year">Choose year</string>
    <string name="welcome_to_the_f1_data_app">Welcome to The F1 data app</string>
    <string name="details">If you are a formula one fan, or you just want to know
         the previous results, this app will suits you perfectly. Swipe right to access the navigation menu and to
    get information of how to use this app. </string>
    <string name="year">Year: </string>
    <string name="home">Home</string>
    <string name="help_desc">This page helps you use this app. Follow the instructions below</string>
    <string name="help_description">1. To navigate, you can use the menu bar on the left side.I assume you already know that.\n\n2. Select what kind of result you want to see and press on them.\n\n3. You can select which year you want the result to be shown from.\n\n4. Finally, press search and you will see the result.\n\n\nIf anything happened to be unclear, feel free to contact the developer.</string>
    <string name="about_desc">This app was made as a home project.\nEvery resource the app is using is under free to use license, although those cannot be used in any kind of commercial purposes.</string>
    <string name="contacts_below">Contacts below</string>
    <string name="contacts">Email: fdominik@mailbox.unideb.hu\n\nUni site: https://www.inf.unideb.hu</string>
    <string name="favourite_years">Favourite years</string>
    <string name="favourite_this_year">Mark this year as favourite</string>
    <string name="races">Races</string>
    <string name="championship">Championship</string>
    <string name="constructors">Constructors</string>
    <string name="delete_favourite_years">Delete Favourite Years</string>
    <string name="championship_result">Championship result</string>
    <string name="search_result">Search Result</string>
    <string name="constructor_result">Constructor result</string>
</resources>