<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hu.unideb.inf.f1uptodate.fragments.ChampionshipFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/champ_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/championship_result"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnGetResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/search_result"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/rvListOfResult"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btnGetResult"
            app:layout_constraintEnd_toStartOf="@+id/spinnerYears" />

        <Spinner
            android:id="@+id/spinnerYears"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/btnGetResult"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.618"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListOfResult"
            android:layout_width="409dp"
            android:layout_height="454dp"
            android:focusable="false"
            app:layout_constraintBottom_toTopOf="@+id/btnSetFavouriteYear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnSetFavouriteYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favourite_this_year"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>